--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "purescript-console": "^0.1.0",
     "purescript-flare": "^0.5",
     "purescript-batteries": "^0.5",
-    "purescript-pux": "^2.0.0"
+    "purescript-pux": "^2.0.0",
+    "purescript-globals": "^0.2.2"
   },
   "resolutions": {
     "purescript-maps": "~0.5.4",
