Add Redo functionality

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "purescript-flare": "^0.5",
     "purescript-batteries": "^0.5",
     "purescript-pux": "^2.0.0",
-    "purescript-globals": "^0.2.2"
+    "purescript-globals": "^0.2.2",
+    "purescript-list-zipper": "^0.0.0"
   },
   "resolutions": {
     "purescript-maps": "~0.5.4",
