--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,11 @@
     "purescript-globals": "^0.2.2",
     "purescript-list-zipper": "https://github.com/DavidHarrison/purescript-list-zipper.git#889f1e",
     "purescript-debug": "^0.1.3",
-    "purescript-trees": "https://github.com/jplatte/purescript-trees.git#master"
+    "purescript-trees": "https://github.com/jplatte/purescript-trees.git#master",
+    "purescript-functor-compose": "^0.0.1",
+    "purescript-free": "^0.9",
+    "purescript-coproducts": "^0.4.1",
+    "purescript-identity": "^0.4.1"
   },
   "resolutions": {
     "purescript-maps": "~0.5.4",
